feat: :sparkles: subscription add form complete
